# woodwork-engine

./: .gitignore  .pre-commit-config.yaml  BLOAT_REMOVAL_SUMMARY.md  CLAUDE.md  DEPRECATED_FILES.md  DESIGN_MICROSERVICES_ARCHITECTURE.md  DISTRIBUTED_MESSAGE_BUS_IMPLEMENTATION.md  MESSAGE_BUS_SESSION_SUMMARY.md  README.md  demo_internal_features.py  dev-main.py  endpoint.txt  internal_hooks_pipes_design.md  main.ww  pyproject.toml  pytest.ini  setup.cfg  setup.py  setup_env.sh  startup_env.sh  test_event_integration.py  test_fastapi_gui.py  test_llm_real_time_emission.py  test_real_time_fix.py  test_updated_llm.py  test_your_config.py  todo.txt
.github/ISSUE_TEMPLATE/: blank-template.md  fix-feature-template.md  new-feature-template.md
.github/workflows/: docs-sync.yml  linter.yml  publish-package.yml  type-checking.yml  unit-tests.yml  update-examples-repo.yml
config/: gui_config.yaml
docs/: api_input_architecture.md  getting-started.md  unified_architecture_solution.md
docs/technical-designs/: 01-streaming-data-architecture.md  02-message-bus-abstraction.md  03-distributed-startup-architecture.md  04-decentralized-orchestration.md  05-streaming-distributed-integration.md
docs/tutorials/: introduction.md
examples/: README.md  create_test_workflow_data.py  direct_api_in_init_demo.py  direct_component_api_demo.py  startup_direct_api_simple.py  workflows_feature_demo.py
examples/01-short-term-memory-agent/: main.ww
examples/02-function-tooling-agent/: functions.py  main.ww  main.ww.backup_20250908_212647
examples/03-api-agent/: main.ww  server.py
examples/03-plan-caching-agent/: functions.py  main.ww
examples/04-plan-caching-agent/: main.ww
examples/05-custom-tool-agent/: main.ww  paper_search_tool.py
examples/05-custom-tool-agent/tools/: paper_search_tool.py
examples/05-workflows/: .gitignore  functions.py
examples/06-pdf-qa/: main.ww
examples/api-agent/: endpoint.txt
examples/custom-tool-test/: database.txt  main.ww
examples/message-bus-demo/: README.md  simple_test.py  test_message_bus.py
examples/message-bus-demo/hooks/: logging.py
examples/message-bus-demo/pipes/: context.py
examples/pdf-test/: main.ww
examples/special-coding-agent/: .env.example  README_Hooks.md  claude_pipes.py  github_api.py  hooks.py  main.ww  pipes.py
examples/test/: endpoint.txt  main.py  main.ww  model.pt  model.py  workflow.json
examples/test/chroma_langchain_db/: chroma.sqlite3
examples/test2/: main.ww
gui/: index.html  package-lock.json  package.json  vite.config.ts
gui/src/: App.tsx  main.tsx
gui/src/app/: page.tsx
gui/src/components/: app-sidebar.tsx  nav-main.tsx  theme-provider.tsx
gui/src/data/: mock-data.ts  mock-workflows.ts
gui/src/hooks/: useApiWithFallback.ts  useBreadcrumbs.ts  useChatAPI.ts  useEnhancedAPI.ts  useWorkflowDetail.ts  useWorkflows.ts
gui/src/layout/: layout.tsx
gui/src/lib/: badge-utils.ts
gui/src/types/: api-types.ts
prompts/defaults/: agent.txt
src/: config_parser.py  main.wf  main.ww
src/components/: knowledge_base.py
src/components/inputs/: command_line.py  inputs.py
src/components/knowledge_bases/: chroma.py
src/components/llms/: hugging_face.py
tests/: README.md  conftest.py  dynamic_imports_test.py  input_interface_test.py  parser_test.py  test_argument_parser.py  test_events.py  test_main.py  tool_interface.py  tool_interface_test.py
tests/integration/: test_component_communication.py  test_full_workflow.py  test_streaming_flow.py
tests/integration/components/: __init__.py  test_direct_api_vs_features.py
tests/integration/mcp/: test_mcp_server.py  test_tool_discovery_integration.py
tests/unit/: test_message_api.py  test_streaming_message_integration.py  test_unified_event_system.py  test_unified_router.py
tests/unit/async_runtime/: test_async_runtime.py  test_async_runtime_mcp_integration.py  test_async_runtime_startup.py
tests/unit/components/: __init__.py
tests/unit/events/: test_event_manager.py  test_event_routing.py  test_events.py  test_payload_types.py  test_unified_events.py
tests/unit/fixtures/: event_fixtures.py  mock_components.py  test_messages.py
tests/unit/inputs/: test_api_input_messaging.py
tests/unit/message_bus/: test_in_memory_bus.py  (+3 more)
tests/utils/: tool_interface.py
woodwork/: __init__.py  __main__.py  argument_parser.py  config_parser.py  dependencies.py  errors.py  events.py  exports.py  generate_exports.py  globals.py  helper_functions.py  payloads.py  registry.py
woodwork.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
woodwork/cli/: argument_parser.py  cleanup.py  main.py  setup_defaults.py
woodwork/components/: component.py  input_interface.py  internal_features.py  knowledge_base.py  streaming_mixin.py  task_master.py
woodwork/config/: .env.example  log_config.json
woodwork/core/: async_runtime.py  distributed_startup.py  distributed_startup_deprecated.py  main.py  simple_message_bus.py  stream_manager.py  task_master.py  unified_event_bus.py
woodwork/deployments/: __init__.py  deployment.py  docker.py  generate_exports.py  main.py  router.py  vms.py
woodwork/events/: __init__.py  events.py
woodwork/gui/: fastapi_gui_server.py  gui.py
woodwork/infra/: infrastructure.py
woodwork/interfaces/: __init__.py  intializable.py  knowledge_base_interface.py  startable.py  tool_interface.py
woodwork/parser/: config_parser.py  dependencies.py
woodwork/types/: __init__.py  data_types.py  event_source.py  events.py  prompts.py  streaming_data.py  workflows.py
woodwork/utils/: __init__.py  helper_functions.py
(+125 files in other folders)
