[metadata]
name = woodwork
version = 0.0.1

[options]
packages = woodwork
include_package_data = True
install_requires =
    python-dotenv

[options.extras_require]
all = 
    langchain
    chromadb
    langchain_chroma
    langchain_community
    sentence-transformers

[options.entry_points]
console_scripts =
    woodwork = woodwork.__main__:main
