[metadata]
name = woodwork-engine
version = 0.0.4
authors = [{ name = "Will Woodward" }]
long_description = This is an AI Agent IaC package.
long_description_content_type = text/x-rst

[options]
packages = woodwork
include_package_data = True
install_requires =
    python-dotenv

[options.extras_require]
all = 
    langchain
    chromadb
    langchain_chroma
    langchain_community
    sentence-transformers

[options.entry_points]
console_scripts =
    woodwork = woodwork.__main__:main

[options.package_data]
* = requirements/**/*.txt