[metadata]
name = woodwork-engine
version = 0.1.1
authors = [{ name = "Will Woodward" }]
description = An AI Agent IaC tool that aims to make developing and deploying AI Agents easier.
long_description_content_type = text/x-rst

[options]
python_requires = >=3.12
packages = woodwork
include_package_data = True
install_requires =
    python-dotenv

[options.extras_require]
all = 
    langchain
    chromadb
    langchain_chroma
    langchain_community
    sentence-transformers

[options.entry_points]
console_scripts =
    woodwork = woodwork.__main__:main

[options.package_data]
* = requirements/**/*.txt